@@ -30,6 +30,7 @@ $ -> Language fix or change
 31-Jan-2011 Mark Dexter
 # [#24642] Incorrect term in a tooltip in the Menu Items screen
 # [#24681] *Issue in back-end login module with Languages not installed in db but present in the admin language folder
+# [#24265] Strict standards: Declaration of WeblinksModelCategory::getItems() should be compatible with that of JModelList::getItems() in
 
 31-Jan-2011 Jean-Marie Simonet
  $ Deleting duplicate lang string
